Updated static github image

--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -63,7 +63,7 @@
     <body>
         <div class="navbar justify-content-center navbar-light bg-light">
             <a class="navbar-brand" href="https://github.com/UdayVarkhedkar/ipv4_heatmap">
-                <img src="{% static 'website/Github-Mark.png' %}" width="18" height="18" alt="Link to the Github Repo">
+                <img src="{% static 'website/github.png' %}" width="18" height="18" alt="Link to the Github Repo">
             </a>
             <div class="navbar-brand" name="header">Interactive Heatmap of IPv4 Networks</div>
             <div class="navbar-text" name="byline">by Uday Varkhedkar</div>
